--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,10 @@
   <link rel="stylesheet" href="../assets/css/theme.css">
 </head>
 
+
+
+
+
 <body>
 
   <!-- Back to top button -->
@@ -33,7 +37,7 @@
         <div class="row">
           <div class="col-sm-8 text-sm">
             <div class="site-info">
-              <a href="#"><span class="mai-call text-primary"></span> +244 939 111 433</a>
+              <a href="#"><span class="mai-call text-primary"></span>+244 939 111 433</a>
               <span class="divider">|</span>
               <a href="#"><span class="mai-mail text-primary"></span> aldacare@gmail.com</a>
             </div>
@@ -428,9 +432,9 @@
         </div>
         <div class="col-sm-6 col-lg-3 py-3">
           <h5>Contato</h5>
-          <p class="footer-link mt-2">Rua das Palmeiras, 123 - São Paulo, SP</p>
-          <a href="#" class="footer-link">(11) 99999-9999</a>
-          <a href="#" class="footer-link">contato@saudemental.com</a>
+          <p class="footer-link mt-2">Bom pastor, Huambo, Angola</p>
+          <a href="#" class="footer-link">+244 939 111 433</a>
+          <a href="#" class="footer-link">aldacare@gmail.com</a>
 
           <h5 class="mt-3">Redes Sociais</h5>
           <div class="footer-sosmed mt-3">
