--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
   <title>One Health - Medical Center HTML5 Template</title>
 
-  <link rel="stylesheet" href="../assets/css/maicons.css">
+  <link rel="stylesheet" href="/assets/css/maicons.css">
 
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
 
