--- a/about.html
+++ b/about.html
@@ -11,15 +11,15 @@
 
   <title>Alda-Care</title>
 
-  <link rel="stylesheet" href="/assets/css/maicons.css">
+  <link rel="stylesheet" href="assets/css/maicons.css">
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" href="/assets/vendor/owl-carousel/css/owl.carousel.css">
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.css">
 
-  <link rel="stylesheet" href="/assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" href="/assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 
 <body>
@@ -75,13 +75,13 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="about.html">Sobre nós</a>
+              <a class="nav-link" href="about.html">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors.html">Proficionais</a>
+              <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Notícias</a>
+              <a class="nav-link" href="blog.html">Centros de Ajuda</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
@@ -95,7 +95,7 @@
     </nav>
   </header>
 
-  <div class="page-banner overlay-dark bg-image" style="background-image: url(/assets/img/bg_image_1.jpg);">
+  <div class="page-banner overlay-dark bg-image" style="background-image: url(assets/img/bg_image_1.jpg);">
     <div class="banner-section">
       <div class="container text-center wow fadeInUp">
         <nav aria-label="Breadcrumb">
@@ -104,7 +104,7 @@
             <li class="breadcrumb-item active" aria-current="page">Sobre</li>
           </ol>
         </nav>
-        <h1 class="font-weight-normal">Sobre nós</h1>
+        <h1 class="font-weight-normal">Serviços</h1>
       </div> <!-- .container -->
     </div> <!-- .banner-section -->
   </div> <!-- .page-banner -->
@@ -118,7 +118,7 @@
               <div class="circle-shape bg-secondary text-white">
                 <span class="mai-people"></span>
               </div>
-              <p>Profissionais</p>
+              <p><a href="doctors.html">Profissionais</a></p>
             </div>
           </div>
           <div class="col-md-3 py-3 py-md-0">
@@ -126,7 +126,7 @@
               <div class="circle-shape bg-primary text-white">
                 <span class="mai-heart"></span>
               </div>
-              <p>Auto Ajuda</p>
+              <p><a href="self_help.html">Auto Ajuda</a></p>
             </div>
           </div>
           <div class="col-md-3 py-3 py-md-0">
@@ -134,7 +134,7 @@
               <div class="circle-shape bg-accent text-white">
                 <span class="mai-medkit"></span>
               </div>
-              <p>Centro de Ajuda</p>
+              <p><a href="blog.html">Centro de Ajuda</a></p>
             </div>
           </div>
           <div class="col-md-3 py-3 py-md-0">
@@ -142,7 +142,7 @@
               <div class="circle-shape bg-success text-white">
                 <span class="mai-pulse"></span>
               </div>
-              <p>Diagnóstico</p>
+              <p><a href="test.html">Teste Online</a></p>
             </div>
           </div>
         </div>
@@ -168,141 +168,176 @@
               </div>
             </div>
 
-            <div class="col-lg-10 mt-5">
-              <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
-              <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4 wow zoomIn">
-                  <div class="card-doctor">
-                    <div class="header">
-                      <img src="/assets/img/doctors/doctor_1.jpg" alt="">
-                      <div class="meta">
-                        <a href="#"><span class="mai-call"></span></a>
-                        <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                      </div>
-                    </div>
-                    <div class="body">
-                      <p class="text-xl mb-0">Dr. Stein Albert</p>
-                      <span class="text-sm text-grey">Cardiology</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow zoomIn">
-                  <div class="card-doctor">
-                    <div class="header">
-                      <img src="/assets/img/doctors/doctor_2.jpg" alt="">
-                      <div class="meta">
-                        <a href="#"><span class="mai-call"></span></a>
-                        <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                      </div>
-                    </div>
-                    <div class="body">
-                      <p class="text-xl mb-0">Dr. Alexa Melvin</p>
-                      <span class="text-sm text-grey">Dental</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow zoomIn">
-                  <div class="card-doctor">
-                    <div class="header">
-                      <img src="/assets/img/doctors/doctor_3.jpg" alt="">
-                      <div class="meta">
-                        <a href="#"><span class="mai-call"></span></a>
-                        <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                      </div>
-                    </div>
-                    <div class="body">
-                      <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-                      <span class="text-sm text-grey">General Health</span>
-                    </div>
-                  </div>
-                </div>
+            <div class="page-section">
+              <div class="container">
+                <h1 class="text-center mb-5 wow fadeInUp">Proficionais</h1>
 
+                <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor1.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Stein Albert</p>
+                        <span class="text-sm text-grey">Cardiology</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor2.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Alexa Melvin</p>
+                        <span class="text-sm text-grey">Dental</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor1.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
+                        <span class="text-sm text-grey">General Health</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor2.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
+                        <span class="text-sm text-grey">General Health</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor1.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
+                        <span class="text-sm text-grey">General Health</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="page-section banner-home bg-image" style="background-image: url(/assets/img/banner-pattern.svg);">
-        <div class="container py-5 py-lg-0">
-          <div class="row align-items-center">
-            <div class="col-lg-4 wow zoomIn">
-              <div class="img-banner d-none d-lg-block">
-                <img src="/assets/img/mobile_app.png" alt="">
-              </div>
+    <div class="page-section banner-home bg-image" style="background-image: url(assets/img/banner-pattern.svg);">
+      <div class="container py-5 py-lg-0">
+        <div class="row align-items-center">
+          <div class="col-lg-4 wow zoomIn">
+            <div class="img-banner d-none d-lg-block">
+              <img src="assets/img/mobile_app.png" alt="">
             </div>
-            <div class="col-lg-8 wow fadeInRight">
-              <h1 class="font-weight-normal mb-3">Get easy access of all features using One Health Application</h1>
-              <a href="#"><img src="/assets/img/google_play.svg" alt=""></a>
-              <a href="#" class="ml-2"><img src="/assets/img/app_store.svg" alt=""></a>
+          </div>
+          <div class="col-lg-8 wow fadeInRight">
+            <h1 class="font-weight-normal mb-3">Get easy access of all features using One Health Application
+            </h1>
+            <a href="#"><img src="assets/img/google_play.svg" alt=""></a>
+            <a href="#" class="ml-2"><img src="assets/img/app_store.svg" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </div> <!-- .banner-home -->
+
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row px-md-3">
+          <div class="col-sm-6 col-lg-3 py-3">
+            <h5>Sobre</h5>
+            <ul class="footer-menu">
+              <li><a href="#">Quem Somos</a></li>
+              <li><a href="#">Carreiras</a></li>
+              <li><a href="#">Equipe Editorial</a></li>
+              <li><a href="#">Política de Proteção</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+            <h5>Mais Informações</h5>
+            <ul class="footer-menu">
+              <li><a href="#">Termos e Condições</a></li>
+              <li><a href="#">Política de Privacidade</a></li>
+              <li><a href="#">Publicidade</a></li>
+              <li><a href="#">Seja um Profissional</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+            <h5>Saúde Mental</h5>
+            <ul class="footer-menu">
+              <li><a href="#">Encontre um Psicólogo</a></li>
+              <li><a href="#">Recursos e Apoio</a></li>
+              <li><a href="#">Dicas de Autoajuda</a></li>
+              <li><a href="#">Contatos de Emergência</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+            <h5>Contato</h5>
+            <p class="footer-link mt-2">Bom pastor, Huambo, Angola</p>
+            <a href="#" class="footer-link">+244 939 111 433</a>
+            <a href="#" class="footer-link">aldacare@gmail.com</a>
+
+            <h5 class="mt-3">Redes Sociais</h5>
+            <div class="footer-sosmed mt-3">
+              <a href="#" target="_blank"><span class="mai-logo-facebook-f"></span></a>
+              <a href="#" target="_blank"><span class="mai-logo-twitter"></span></a>
+              <a href="#" target="_blank"><span class="mai-logo-instagram"></span></a>
+              <a href="#" target="_blank"><span class="mai-logo-linkedin"></span></a>
             </div>
           </div>
         </div>
-      </div> <!-- .banner-home -->
 
-      <footer class="page-footer">
-        <div class="container">
-          <div class="row px-md-3">
-            <div class="col-sm-6 col-lg-3 py-3">
-              <h5>Company</h5>
-              <ul class="footer-menu">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Editorial Team</a></li>
-                <li><a href="#">Protection</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-6 col-lg-3 py-3">
-              <h5>More</h5>
-              <ul class="footer-menu">
-                <li><a href="#">Terms & Condition</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Advertise</a></li>
-                <li><a href="#">Join as Doctors</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-6 col-lg-3 py-3">
-              <h5>Our partner</h5>
-              <ul class="footer-menu">
-                <li><a href="#">One-Fitness</a></li>
-                <li><a href="#">One-Drugs</a></li>
-                <li><a href="#">One-Live</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-6 col-lg-3 py-3">
-              <h5>Contact</h5>
-              <p class="footer-link mt-2">351 Willow Street Franklin, MA 02038</p>
-              <a href="#" class="footer-link">701-573-7582</a>
-              <a href="#" class="footer-link">healthcare@temporary.net</a>
+        <hr>
 
-              <h5 class="mt-3">Social Media</h5>
-              <div class="footer-sosmed mt-3">
-                <a href="#" target="_blank"><span class="mai-logo-facebook-f"></span></a>
-                <a href="#" target="_blank"><span class="mai-logo-twitter"></span></a>
-                <a href="#" target="_blank"><span class="mai-logo-google-plus-g"></span></a>
-                <a href="#" target="_blank"><span class="mai-logo-instagram"></span></a>
-                <a href="#" target="_blank"><span class="mai-logo-linkedin"></span></a>
-              </div>
-            </div>
-          </div>
+        <p id="copyright">Copyright &copy; 2025 <a href="https://macodeid.com/" target="_blank">MACode ID</a>.
+          Todos
+          os
+          direitos reservados.</p>
+      </div>
+    </footer>
 
-          <hr>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
 
-          <p id="copyright">Copyright &copy; 2020 <a href="https://macodeid.com/" target="_blank">MACode ID</a>. All
-            right
-            reserved</p>
-        </div>
-      </footer>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 
-      <script src="/assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-      <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/wow/wow.min.js"></script>
 
-      <script src="/assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-      <script src="/assets/vendor/wow/wow.min.js"></script>
-
-      <script src="/assets/js/theme.js"></script>
+    <script src="assets/js/theme.js"></script>
 
 </body>
 
