--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,19 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center HTML5 Template</title>
+  <title>Alda-Care</title>
 
-  <link rel="stylesheet" href="/assets/css/maicons.css">
+  <link rel="stylesheet" href="assets/css/maicons.css">
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" href="/assets/vendor/owl-carousel/css/owl.carousel.css">
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.css">
 
-  <link rel="stylesheet" href="/assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" href="/assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/theme.css">
 </head>
+
 <body>
 
   <!-- Back to top button -->
@@ -31,9 +33,9 @@
         <div class="row">
           <div class="col-sm-8 text-sm">
             <div class="site-info">
-              <a href="#"><span class="mai-call text-primary"></span> +00 123 4455 6666</a>
+              <a href="#"><span class="mai-call text-primary"></span>+244 939 111 433</a>
               <span class="divider">|</span>
-              <a href="#"><span class="mai-mail text-primary"></span> mail@example.com</a>
+              <a href="#"><span class="mai-mail text-primary"></span> aldacare@gmail.com</a>
             </div>
           </div>
           <div class="col-sm-4 text-right text-sm">
@@ -50,40 +52,42 @@
 
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="#"><span class="text-primary">One</span>-Health</a>
+        <a class="navbar-brand" href="#"><span class="text-primary">Alda</span>-Care</a>
 
         <form action="#">
           <div class="input-group input-navbar">
             <div class="input-group-prepend">
               <span class="input-group-text" id="icon-addon1"><span class="mai-search"></span></span>
             </div>
-            <input type="text" class="form-control" placeholder="Enter keyword.." aria-label="Username" aria-describedby="icon-addon1">
+            <input type="text" class="form-control" placeholder="Pesquisar.." aria-label="Username"
+              aria-describedby="icon-addon1">
           </div>
         </form>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport"
+          aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupport">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors.html">Doctors</a>
+              <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">News</a>
+            <li class="nav-item ">
+              <a class="nav-link" href="blog.html">Centros de ajuda</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary ml-lg-3" href="#">Login / Register</a>
+              <a class="btn btn-primary ml-lg-3" href="#">Entrar / Criar conta</a>
             </li>
           </ul>
         </div> <!-- .navbar-collapse -->
@@ -91,109 +95,102 @@
     </nav>
   </header>
 
-  <div class="page-banner overlay-dark bg-image" style="background-image: url(/assets/img/bg_image_1.jpg);">
+  <div class="page-banner overlay-dark bg-image" style="background-image: url(assets/img/bg_image_1.jpg);">
     <div class="banner-section">
       <div class="container text-center wow fadeInUp">
         <nav aria-label="Breadcrumb">
           <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Contact</li>
+            <li class="breadcrumb-item active" aria-current="page">Contacto</li>
           </ol>
         </nav>
-        <h1 class="font-weight-normal">Contact</h1>
+        <h1 class="font-weight-normal">Contacto</h1>
       </div> <!-- .container -->
     </div> <!-- .banner-section -->
   </div> <!-- .page-banner -->
 
   <div class="page-section">
     <div class="container">
-      <h1 class="text-center wow fadeInUp">Get in Touch</h1>
+      <h1 class="text-center wow fadeInUp">Entrar em contacto</h1>
 
-      <form class="contact-form mt-5">
-        <div class="row mb-3">
-          <div class="col-sm-6 py-2 wow fadeInLeft">
-            <label for="fullName">Name</label>
-            <input type="text" id="fullName" class="form-control" placeholder="Full name..">
+      <form class="main-form">
+        <div class="row mt-5 ">
+          <div class="col-12 col-sm-6 py-2 wow fadeInLeft">
+            <input type="text" class="form-control" placeholder="Nome completo">
           </div>
-          <div class="col-sm-6 py-2 wow fadeInRight">
-            <label for="emailAddress">Email</label>
-            <input type="text" id="emailAddress" class="form-control" placeholder="Email address..">
+          <div class="col-12 col-sm-6 py-2 wow fadeInRight">
+            <input type="text" class="form-control" placeholder="Endereço de e-mail..">
           </div>
-          <div class="col-12 py-2 wow fadeInUp">
-            <label for="subject">Subject</label>
-            <input type="text" id="subject" class="form-control" placeholder="Enter subject..">
+          <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
+            <input type="date" class="form-control">
           </div>
-          <div class="col-12 py-2 wow fadeInUp">
-            <label for="message">Message</label>
-            <textarea id="message" class="form-control" rows="8" placeholder="Enter Message.."></textarea>
+          <div class="col-12 col-sm-6 py-2 wow fadeInRight" data-wow-delay="300ms">
+            <select name="departement" id="departement" class="custom-select">
+              <option value="informacoes">Informações Gerais</option>
+              <option value="suporte">Suporte ao Cliente</option>
+              <option value="parcerias">Parcerias e Colaborações</option>
+              <option value="dicas">Dicas e Orientações</option>
+              <option value="feedback">Envio de Feedback</option>
+            </select>
+          </div>
+          <div class="col-12 py-2 wow fadeInUp" data-wow-delay="300ms">
+            <input type="text" class="form-control" placeholder="Número de telefone..">
+          </div>
+          <div class="col-12 py-2 wow fadeInUp" data-wow-delay="300ms">
+            <textarea name="message" id="message" class="form-control" rows="6"
+              placeholder="Digite sua mensagem.."></textarea>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary wow zoomIn">Send Message</button>
+
+        <button type="submit" class="btn btn-primary mt-3 wow zoomIn">Enviar</button>
       </form>
     </div>
-  </div>
+  </div> <!-- .page-section -->
 
   <div class="maps-container wow fadeInUp">
     <div id="google-maps"></div>
   </div>
 
-  <div class="page-section banner-home bg-image" style="background-image: url(/assets/img/banner-pattern.svg);">
-    <div class="container py-5 py-lg-0">
-      <div class="row align-items-center">
-        <div class="col-lg-4 wow zoomIn">
-          <div class="img-banner d-none d-lg-block">
-            <img src="/assets/img/mobile_app.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-8 wow fadeInRight">
-          <h1 class="font-weight-normal mb-3">Get easy access of all features using One Health Application</h1>
-          <a href="#"><img src="/assets/img/google_play.svg" alt=""></a>
-          <a href="#" class="ml-2"><img src="/assets/img/app_store.svg" alt=""></a>
-        </div>
-      </div>
-    </div>
-  </div> <!-- .banner-home -->
-
   <footer class="page-footer">
     <div class="container">
       <div class="row px-md-3">
         <div class="col-sm-6 col-lg-3 py-3">
-          <h5>Company</h5>
+          <h5>Sobre</h5>
           <ul class="footer-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Editorial Team</a></li>
-            <li><a href="#">Protection</a></li>
+            <li><a href="#">Quem Somos</a></li>
+            <li><a href="#">Carreiras</a></li>
+            <li><a href="#">Equipe Editorial</a></li>
+            <li><a href="#">Política de Proteção</a></li>
           </ul>
         </div>
         <div class="col-sm-6 col-lg-3 py-3">
-          <h5>More</h5>
+          <h5>Mais Informações</h5>
           <ul class="footer-menu">
-            <li><a href="#">Terms & Condition</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Advertise</a></li>
-            <li><a href="#">Join as Doctors</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="#">Publicidade</a></li>
+            <li><a href="#">Seja um Profissional</a></li>
           </ul>
         </div>
         <div class="col-sm-6 col-lg-3 py-3">
-          <h5>Our partner</h5>
+          <h5>Saúde Mental</h5>
           <ul class="footer-menu">
-            <li><a href="#">One-Fitness</a></li>
-            <li><a href="#">One-Drugs</a></li>
-            <li><a href="#">One-Live</a></li>
+            <li><a href="#">Encontre um Psicólogo</a></li>
+            <li><a href="#">Recursos e Apoio</a></li>
+            <li><a href="#">Dicas de Autoajuda</a></li>
+            <li><a href="#">Contatos de Emergência</a></li>
           </ul>
         </div>
         <div class="col-sm-6 col-lg-3 py-3">
-          <h5>Contact</h5>
-          <p class="footer-link mt-2">351 Willow Street Franklin, MA 02038</p>
-          <a href="#" class="footer-link">701-573-7582</a>
-          <a href="#" class="footer-link">healthcare@temporary.net</a>
+          <h5>Contato</h5>
+          <p class="footer-link mt-2">Bom pastor, Huambo, Angola</p>
+          <a href="#" class="footer-link">+244 939 111 433</a>
+          <a href="#" class="footer-link">aldacare@gmail.com</a>
 
-          <h5 class="mt-3">Social Media</h5>
+          <h5 class="mt-3">Redes Sociais</h5>
           <div class="footer-sosmed mt-3">
             <a href="#" target="_blank"><span class="mai-logo-facebook-f"></span></a>
             <a href="#" target="_blank"><span class="mai-logo-twitter"></span></a>
-            <a href="#" target="_blank"><span class="mai-logo-google-plus-g"></span></a>
             <a href="#" target="_blank"><span class="mai-logo-instagram"></span></a>
             <a href="#" target="_blank"><span class="mai-logo-linkedin"></span></a>
           </div>
@@ -202,23 +199,26 @@
 
       <hr>
 
-      <p id="copyright">Copyright &copy; 2020 <a href="https://macodeid.com/" target="_blank">MACode ID</a>. All right reserved</p>
+      <p id="copyright">Copyright &copy; 2025 <a href="https://macodeid.com/" target="_blank">MACode ID</a>. Todos os
+        direitos reservados.</p>
     </div>
   </footer>
 
-<script src="/assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
 
-<script src="/assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+  <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-<script src="/assets/vendor/wow/wow.min.js"></script>
+  <script src="assets/vendor/wow/wow.min.js"></script>
 
-<script src="/assets/js/google-maps.js"></script>
+  <script src="assets/js/google-maps.js"></script>
 
-<script src="/assets/js/theme.js"></script>
+  <script src="assets/js/theme.js"></script>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
-  
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
+
 </body>
+
 </html>
