--- a/test.html
+++ b/test.html
@@ -210,7 +210,7 @@
         <center>
             <h1>Teste de Saúde Mental</h1>
             <div id="question-list"></div>
-            <button class="btn-calcular" onclick="calcularResultado()">Calcular Resultado</button>
+            <button class="btn-calcular" onclick="calcularResultado()">Ver Resultado</button>
             <!-- Modal para exibir o resultado -->
             <div id="resultadoModal" class="modal">
                 <div class="modal-content">
