--- a/doctors.html
+++ b/doctors.html
@@ -9,9 +9,11 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center HTML5 Template</title>
+  <title>Alda-Care</title>
 
   <link rel="stylesheet" href="assets/css/maicons.css">
+
+  <link rel="icon" type="image/x-icon" href="assets/img/brain.ico">
 
   <link rel="stylesheet" href="assets/css/bootstrap.css">
 
@@ -53,16 +55,6 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#"><span class="text-primary">Alda</span>-Care</a>
-
-        <form action="#">
-          <div class="input-group input-navbar">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="icon-addon1"><span class="mai-search"></span></span>
-            </div>
-            <input type="text" class="form-control" placeholder="Pesquisar.." aria-label="Username"
-              aria-describedby="icon-addon1">
-          </div>
-        </form>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport"
           aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
