--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alda-Care - Teste de Saúde Mental</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/brain.ico">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/theme.css">
 
@@ -383,7 +384,7 @@
             const respostas = document.querySelectorAll('input[type="radio"]:checked');
 
             if (respostas.length !== questions.length) {
-                mostrarResultado("🚫", "Por favor, responda todas as perguntas antes de calcular o resultado.");
+                mostrarResultado("🚫", "Por favor, responda todas as perguntas antes de ver o resultado.");
                 return;
             }
 
