--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
   <title>Alda-Care</title>
+
+  <link rel="icon" type="image/x-icon" href="assets/img/brain.ico">
 
   <link rel="stylesheet" href="assets/css/maicons.css">
 
@@ -44,7 +47,7 @@
           </div>
           <div class="col-sm-4 text-right text-sm">
             <div class="social-mini-button">
-              <a href="#"><span class="mai-logo-facebook-f"></span></a>
+              <a href="https://web.facebook.com/aldadealmeida.jessica"><span class="mai-logo-facebook-f"></span></a>
               <a href="#"><span class="mai-logo-twitter"></span></a>
               <a href="#"><span class="mai-logo-dribbble"></span></a>
               <a href="#"><span class="mai-logo-instagram"></span></a>
@@ -57,16 +60,6 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#"><span class="text-primary">Alda</span>-Care</a>
-
-        <form action="#">
-          <div class="input-group input-navbar">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="icon-addon1"><span class="mai-search"></span></span>
-            </div>
-            <input type="text" class="form-control" placeholder="Pesquisar.." aria-label="Username"
-              aria-describedby="icon-addon1">
-          </div>
-        </form>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport"
           aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
