--- a/doctors.html
+++ b/doctors.html
@@ -73,6 +73,9 @@
               <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="self_help.html">Autoajuda</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="blog.html">Centros de Ajuda</a>
             </li>
             <li class="nav-item">
@@ -93,10 +96,10 @@
         <nav aria-label="Breadcrumb">
           <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Proficionais</li>
+            <li class="breadcrumb-item active" aria-current="page">Profissionais</li>
           </ol>
         </nav>
-        <h1 class="font-weight-normal">Proficionais</h1>
+        <h1 class="font-weight-normal">Profissionais</h1>
       </div> <!-- .container -->
     </div> <!-- .banner-section -->
   </div> <!-- .page-banner -->
@@ -114,8 +117,8 @@
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">Dr. Stein Albert</p>
-              <span class="text-sm text-grey">Cardiology</span>
+              <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+              <span class="text-sm text-grey">Terapeuta</span>
             </div>
           </div>
         </div>
@@ -129,8 +132,8 @@
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">Dr. Alexa Melvin</p>
-              <span class="text-sm text-grey">Dental</span>
+              <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+              <span class="text-sm text-grey">Psicólogo</span>
             </div>
           </div>
         </div>
@@ -144,23 +147,8 @@
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="assets/img/doctors/doctor1.jpg" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
+              <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+              <span class="text-sm text-grey">Terapeuta</span>
             </div>
           </div>
         </div>
@@ -174,8 +162,38 @@
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
+              <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+              <span class="text-sm text-grey">Psicólogo</span>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="card-doctor">
+            <div class="header">
+              <img src="assets/img/doctors/doctor1.jpg" alt="">
+              <div class="meta">
+                <a href="#"><span class="mai-call"></span></a>
+                <a href="#"><span class="mai-logo-whatsapp"></span></a>
+              </div>
+            </div>
+            <div class="body">
+              <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+              <span class="text-sm text-grey">Terapeuta</span>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="card-doctor">
+            <div class="header">
+              <img src="assets/img/doctors/doctor2.jpg" alt="">
+              <div class="meta">
+                <a href="#"><span class="mai-call"></span></a>
+                <a href="#"><span class="mai-logo-whatsapp"></span></a>
+              </div>
+            </div>
+            <div class="body">
+              <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+              <span class="text-sm text-grey">Psicólogo</span>
             </div>
           </div>
         </div>
