--- a/about.html
+++ b/about.html
@@ -73,6 +73,9 @@
               <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="self_help.html">Autoajuda</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="blog.html">Centros de Ajuda</a>
             </li>
             <li class="nav-item">
@@ -162,7 +165,7 @@
 
             <div class="page-section">
               <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp">Proficionais</h1>
+                <h1 class="text-center mb-5 wow fadeInUp">Profissionais</h1>
 
                 <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
                   <div class="item">
@@ -175,8 +178,8 @@
                         </div>
                       </div>
                       <div class="body">
-                        <p class="text-xl mb-0">Dr. Stein Albert</p>
-                        <span class="text-sm text-grey">Cardiology</span>
+                        <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+                        <span class="text-sm text-grey">Terapeuta</span>
                       </div>
                     </div>
                   </div>
@@ -190,8 +193,8 @@
                         </div>
                       </div>
                       <div class="body">
-                        <p class="text-xl mb-0">Dr. Alexa Melvin</p>
-                        <span class="text-sm text-grey">Dental</span>
+                        <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+                        <span class="text-sm text-grey">Psicólogo</span>
                       </div>
                     </div>
                   </div>
@@ -205,8 +208,8 @@
                         </div>
                       </div>
                       <div class="body">
-                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-                        <span class="text-sm text-grey">General Health</span>
+                        <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+                        <span class="text-sm text-grey">Terapeuta</span>
                       </div>
                     </div>
                   </div>
@@ -220,8 +223,8 @@
                         </div>
                       </div>
                       <div class="body">
-                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-                        <span class="text-sm text-grey">General Health</span>
+                        <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+                        <span class="text-sm text-grey">Psicólogo</span>
                       </div>
                     </div>
                   </div>
@@ -235,8 +238,23 @@
                         </div>
                       </div>
                       <div class="body">
-                        <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-                        <span class="text-sm text-grey">General Health</span>
+                        <p class="text-xl mb-0">Dra. Alfâmia Almeida</p>
+                        <span class="text-sm text-grey">Terapeuta</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="card-doctor">
+                      <div class="header">
+                        <img src="assets/img/doctors/doctor2.jpg" alt="">
+                        <div class="meta">
+                          <a href="#"><span class="mai-call"></span></a>
+                          <a href="#"><span class="mai-logo-whatsapp"></span></a>
+                        </div>
+                      </div>
+                      <div class="body">
+                        <p class="text-xl mb-0">Dr. Estanislau de Almeida</p>
+                        <span class="text-sm text-grey">Psicólogo</span>
                       </div>
                     </div>
                   </div>
