--- a/blog.html
+++ b/blog.html
@@ -72,8 +72,11 @@
             <li class="nav-item">
               <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="self_help.html">Autoajuda</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="blog.html">Centros de ajuda</a>
+              <a class="nav-link" href="blog.html">Centros de Ajuda</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
