--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,9 @@
             <li class="nav-item">
               <a class="nav-link" href="doctors.html">Profissionais</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="self_help.html">Autoajuda</a>
+            </li>
             <li class="nav-item ">
               <a class="nav-link" href="blog.html">Centros de ajuda</a>
             </li>
