--- a/self_help.html
+++ b/self_help.html
@@ -72,6 +72,9 @@
                             <a class="nav-link" href="doctors.html">Proficionais</a>
                         </li>
                         <li class="nav-item active">
+                            <a class="nav-link" href="self_help.html">Autoajuda</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="blog.html">Centros de ajuda</a>
                         </li>
                         <li class="nav-item">
