--- a/test.html
+++ b/test.html
@@ -11,8 +11,51 @@
     <link rel="stylesheet" href="assets/css/theme.css">
 
     <style>
+        /* Animações */
+        @keyframes fadeInLeft {
+            from {
+                opacity: 0;
+                transform: translateX(-100px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes fadeInRight {
+            from {
+                opacity: 0;
+                transform: translateX(100px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Estilo inicial das perguntas */
         .question-container {
-            background: rgba(255, 255, 255, 0.9); /* Fundo branco semi-transparente para legibilidade */
+            opacity: 0;
+            /* Começa invisível */
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        /* Classes para animação */
+        .fade-in-left {
+            animation: fadeInLeft 1s ease-out forwards;
+        }
+
+        .fade-in-right {
+            animation: fadeInRight 1s ease-out forwards;
+        }
+
+        .question-container {
+            background: rgba(255, 255, 255, 0.9);
+            /* Fundo branco semi-transparente para legibilidade */
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -141,13 +184,16 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-            min-height: 100vh; /* Garante que o fundo cubra toda a tela */
+            min-height: 100vh;
+            /* Garante que o fundo cubra toda a tela */
             padding: 40px 0;
         }
 
         h1 {
-            color: #fff; /* Cor branca para o título se destacar no fundo */
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Sombra para legibilidade */
+            color: #fff;
+            /* Cor branca para o título se destacar no fundo */
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            /* Sombra para legibilidade */
         }
     </style>
 </head>
@@ -179,24 +225,17 @@
         <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
             <div class="container">
                 <a class="navbar-brand" href="#"><span class="text-primary">Alda</span>-Care</a>
-                <form action="#">
-                    <div class="input-group input-navbar">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="icon-addon1"><span class="mai-search"></span></span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Pesquisar.." aria-label="Username"
-                            aria-describedby="icon-addon1">
-                    </div>
-                </form>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport"
                     aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupport">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">Serviços</a></li>
                         <li class="nav-item"><a class="nav-link" href="doctors.html">Profissionais</a></li>
+                        <li class="nav-item "><a class="nav-link" href="self_help.html">Autoajuda</a></li>
                         <li class="nav-item"><a class="nav-link" href="blog.html">Centros de Ajuda</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         <li class="nav-item"><a class="btn btn-primary ml-lg-3" href="#">Entrar / Criar conta</a></li>
@@ -311,9 +350,17 @@
         ];
 
         // Função para criar elementos de pergunta
+        // Função para criar elementos de pergunta (modificada)
         function createQuestionElement(question, index) {
             const questionContainer = document.createElement("div");
             questionContainer.classList.add("question-container");
+
+            // Adiciona classe de animação baseada no índice (par/impar)
+            const animationClass = index % 2 === 0 ? "fade-in-left" : "fade-in-right";
+            questionContainer.classList.add(animationClass);
+
+            // Adiciona delay baseado no índice para animação sequencial
+            questionContainer.style.animationDelay = `${index * 0.2}s`;
 
             const questionElement = document.createElement("div");
             questionElement.classList.add("question");
@@ -354,6 +401,8 @@
 
             return questionContainer;
         }
+
+        // Resto do código JavaScript permanece o mesmo...
 
         // Adicionar perguntas ao DOM
         const questionList = document.getElementById("question-list");
