--- a/contact.html
+++ b/contact.html
@@ -194,8 +194,7 @@
 
       <hr>
 
-      <p id="copyright">Copyright &copy; 2025 target="_blank">Alda-Care/a>. Todos
-        os
+      <p id="copyright">Copyright &copy; 2025 <a href="" target="_blank">Alda-Care</a>. Todos os
         direitos reservados.</p>
     </div>
   </footer>
