--- a/self_help.html
+++ b/self_help.html
@@ -277,7 +277,7 @@
 
             <hr>
 
-            <p id="copyright">Copyright &copy; 2025 target="_blank">Alda-Care/a>. Todos
+            <p id="copyright">Copyright &copy; 2025 <a href="" target="_blank">Alda-Care/a>. Todos
                 os
                 direitos reservados.</p>
         </div>
