Focar apenas em saude mental

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 py-3 wow fadeInUp">
             <h1>Bem-vindo à Alda-Care</h1>
-            <p class="text-grey mb-4">A Alda-Care é uma plataforma inovadora dedicada ao bem-estar e à saúde mental.
+            <p class="text-grey mb-4">A Alda-Care é uma plataforma inovadora dedicada à saúde mental.
               Nosso objetivo é conectar você com profissionais qualificados, oferecer testes online para
               autoconhecimento e fornecer recursos valiosos para o cuidado da mente.</p>
             <p class="text-grey mb-4">Aqui, você encontrará suporte para lidar com desafios emocionais, melhorar sua
